[package]
name = "aes-wasm"
version = "0.1.17"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/good-lly/rust-aes256-gcm-wasm"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "AES256-GCM for WebAssembly"
keywords = ["aes256-gcm", "wasm", "webassembly"]

[dev-dependencies]
benchmark-simple = "0.1.10"
aes-gcm = "0.10.3"
wasm-bindgen = "0.2.100"      

[[bench]]
name = "benchmark"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
